# kab

./: .gitignore  README.md
kab/: .gitignore  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  README.md  TODO.md  build.sh  data  db.sqlite3  k8s.yaml  manage.py  requirements.txt  setup.cfg  setup.py  tox.ini
kab/kab/: consts.py  logformat.py  processors.py  settings.py  urls.py  wsgi.py
kab/kab/core/: apps.py  helpers.py  jsondiff.py  jsonutil.py  models.py  tmpl.py  urls.py  views.py
kab/kab/core/templatetags/: core_tags.py
kab/kab/static/css/: kab.css
kab/kab/static/js/: bootstrap-4.3.1.min.js
kab/kab/templates/: base.html  index.html  jstree.html  notfound.html  pagination.html  yaml.html
kab/kab/templates/core/: apis.html  compare-defs.html  compare-ops.html  def-details.html  def-diff.html  def-history.html  def-list.html  def-view.html  defdiff.html  definition-list.html  definition.html  edit-api.html  features.html  full-history.html  group-list.html  help-dialog.html  help-page.html  op-diff.html  op-history.html  op-list.html  op-view.html  operation-list.html  operations.html  resource-list.html  resources.html  static-container.html  try-yaml.html  view-definition.html  view-op.html  view-source.html
kab/kab/templates/modals/: confirm-delete.html
kab/kab/templates/static/: .resource.md.swp  apigroup-long.md  apiversion-long.md  apiversion.md  changes.html  changes.md  chunks.md  common-labels.md  concepts.html  concepts.md  container-resource.md  content-type.md  conventions.html  deletion.md  (+31 more)
kab/static/css/: kab.css
kab/tools/: jsondiff
(+20994 files in other folders)
