[metadata]
name = KAB
version = 0.12.0
summary = Kubernetes API Browser
author = Qiming Teng
author_email = tengqm@gmail.com
home_page = 
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Web
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    kab

[global]
setup-hooks = pbr.hooks.setup_hook

[bdist_wheel]
universal = 1
